@@ -131,6 +131,9 @@ public:
     void setHorizontalStretch(int stretchFactor) { bits.horStretch = static_cast<quint32>(qBound(0, stretchFactor, 255)); }
     void setVerticalStretch(int stretchFactor) { bits.verStretch = static_cast<quint32>(qBound(0, stretchFactor, 255)); }
 
+    bool retainSizeWhenHidden() const { return bits.retainSizeWhenHidden; }
+    void setRetainSizeWhenHidden(bool retainSize) { bits.retainSizeWhenHidden = retainSize; }
+
     void transpose();
 
 
@@ -150,7 +153,7 @@ private:
             quint32 ctype : 5;
             quint32 hfw : 1;
             quint32 wfh : 1;
-            quint32 padding : 1;   // feel free to use
+            quint32 retainSizeWhenHidden : 1;
         } bits;
         quint32 data;
     };
